[gd_scene load_steps=2 format=3 uid="uid://cy1dl5t1qfcfp"]

[ext_resource type="Script" path="res://scenes/slider_with_direct_set.gd" id="1_xykf3"]

[node name="SliderWithDirectSet" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -538.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_xykf3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Control"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
